@@ -1534,7 +1534,10 @@ class SummaryLabel(ListLabel):
     def update_total(self):
         """Recalculate the total value of all columns"""
         attr = self._column.attribute
-        value = sum([kgetattr(obj, attr) for obj in self._klist], 0.0)
+        get_attribute = self._column.get_attribute
+
+        value = sum([float(get_attribute(obj, attr)) for obj in self._klist],
+                    0.0)
         self.set_value(value)
 
     # Callbacks
